bug: fix navbar being below map

--- a/static/main.css
+++ b/static/main.css
@@ -170,7 +170,8 @@ nav {
     position: sticky;
     top: 0;
     height: 70px;
-    z-index: 1;
+    /* higher than leaflet's controls */
+    z-index: 4000;
 }
 
 nav ul {
