:world_map:  Visualize the countries #200 (#226)
* add a map of countries in Govdirectory
* add a button from the list of countries to new map page

Co-authored-by: Ainali <ainali.jan@gmail.com>

--- a/static/main.css
+++ b/static/main.css
@@ -170,7 +170,8 @@ nav {
     position: sticky;
     top: 0;
     height: 70px;
-    z-index: 1;
+    /* higher than leaflet's controls */
+    z-index: 4000;
 }
 
 nav ul {
@@ -323,6 +324,11 @@ table th:not(.js-sort-none):hover {
 
 .btn.rounded {
     border-radius: 20px;
+}
+
+.btn.right {
+    float: right;
+    margin: 0em;
 }
 
 
