✨ Add button to navigate back to the country list

--- a/templates/countries-map.html
+++ b/templates/countries-map.html
@@ -6,7 +6,10 @@
 
 {{ define "main" }}
 <main class="container">
-    <h1>Map of countries</h1>
+    <div>
+        <a href="../" class="btn right">View as a list</a>
+        <h1>Map of countries</h1>
+    </div>
     <noscript>
         <p>This page requries JavaScript.</p>
     </noscript>
