Uppercase for TSV for accessibility

--- a/templates/org.html
+++ b/templates/org.html
@@ -117,7 +117,7 @@
         <div class="container move-away">
             <h2 class="m0">Platforms and accounts</h2>
             {{- if $socialAccounts -}}
-            <a id="download" download="{{ .orgLabel }} - {{ .qid }}.tsv" href="#" class="btn need-js">Download (as tsv)</a>
+            <a id="download" download="{{ .orgLabel }} - {{ .qid }}.tsv" href="#" class="btn need-js">Download (as TSV)</a>
             {{- end -}}
         </div>
     </section>
