--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -20,7 +20,7 @@
 										<h2 class="m0 expand-mobile">Agencies</h2>
 										<input id="filter-input" type="text" placeholder="Search" aria-label="Search/filter table" class="need-js expand-mobile"/>
 								</div>
-								<a id="download" download="{{ .name }}.tsv" href="#" class="btn need-js expand-mobile">Download</a>
+								<a id="download" download="{{ .name }}.tsv" href="#" class="btn need-js expand-mobile">Download (as TSV)</a>
 						</div>
         </div>
     </section>
