hide-view-on-map

--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -5,9 +5,18 @@
 {{ define "canonical" }}/countries/{{ end }}
 
 {{ define "main" }}
+
+<noscript>
+    <style type="text/css">
+        .view-map-button {
+            display:none;
+        }
+    </style>
+</noscript>
+
 <main class="container">
     <div>
-        <a href="map/" class="btn right">View on a map</a>
+        <a href="map/" class="btn right view-map-button">View on a map</a>
         <h1>Countries</h1>
     </div>
     <ul class="box-list">
