--- a/templates/org.html
+++ b/templates/org.html
@@ -74,7 +74,7 @@
                         <a href="tel:{{ $details.phone }}">{{ $details.phone }}</a>
                     {{- else -}} <span class="text-grey">[missing data]</span>
                     {{- end -}}</li>
-                    <li>Led by: {{ if $details.leadBy -}}
+                    <li>office held by head of government: {{ if $details.leadBy -}}
                         {{ $details.leadBy }}
                     {{- else -}} <span class="text-grey">[missing data]</span>
                     {{- end -}}</li>
