--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -95,7 +95,7 @@
             <a title="Go to Govdirectory's main page" href="/"><img aria-hidden="true" src="/logo-white.svg" alt="" height="60" width="50"></a>
             <div>
                 <a title="Digital Public Goods" href="https://digitalpublicgoods.net/registry/govdirectory.html"><img aria-hidden="true" height="33" width="69" src="/dpgbadge.svg"></a>
-                <a title="Powered by Wikidata" href="https://www.wikidata.org"><img aria-hidden="true" height="33" width="120" class="white-bg" src="/wikidatafooter.png"></a>
+                <a title="Powered by Wikidata" href="https://www.wikidata.org"><img aria-hidden="true" height="33" width="120" class="white-bg" src="/wikidatafooter.svg"></a>
             </div>
         </div>
     </footer> 
