--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -5,9 +5,10 @@
 {{ define "canonical" }}/countries/{{ end }}
 
 {{ define "main" }}
+
 <main class="container">
     <div>
-        <a href="map/" class="btn right">View on a map</a>
+        <a href="map/" class="btn right need-js">View on a map</a>
         <h1>Countries</h1>
     </div>
     <ul class="box-list">
