--- a/templates/topic-list.html
+++ b/templates/topic-list.html
@@ -15,7 +15,7 @@
                     <div>
                         <img aria-hidden="true" src="/topic-icons/{{ .safeName }}.svg"/>
                     </div>
-                    <span>{{ .name }}</span>
+                    <span lang="{{ .name.Lang }}">{{ .name }}</span>
                 </a>
             </li>
         {{- end -}}
