--- a/templates/org-table.html
+++ b/templates/org-table.html
@@ -7,9 +7,9 @@
 
     {{- range . -}}
     <tr>
-        <td><a href="{{ .qid }}/">{{ .orgLabel }}</a></td>
+        <td lang="{{ .orgLabel.Lang }}"><a href="{{ .qid }}/">{{ .orgLabel }}</a></td>
         <td>{{ include "components/social-icons.html" (query "account-data.rq" .qid.String) }}</td>
-        <td>{{ .typeLabel }}</td>
+        <td lang="{{ .typeLabel.Lang }}">{{ .typeLabel }}</td>
     </tr>
     {{ end -}}
 </table>
