--- a/templates/landing.html
+++ b/templates/landing.html
@@ -82,7 +82,7 @@
               <div>
                 <img aria-hidden="true" src="/topic-icons/{{ .safeName }}.svg"/>
               </div>
-              <span lang="{{ .name.Lang }}">{{ .name }}</h1>
+              <span lang="{{ .name.Lang }}">{{ .name }}</span>
             </a>
           </li>
         {{- end -}}
