--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -52,7 +52,7 @@
 			<div class="move-away">
 					<div class="expand-mobile">
 							<h2 class="m0 expand-mobile">Agencies</h2>
-							<input id="filter-input" type="text" placeholder="Search" aria-label="Search/filter table" class="need-js expand-mobile"/>
+							<input id="filter-input" type="text" placeholder="Search" aria-label="Search/filter table" aria-controls="mainOrgTable" class="need-js expand-mobile"/>
 					</div>
 					<a id="download" download="{{ .name }}.tsv" href="#" class="btn need-js expand-mobile">Download (as TSV)</a>
 			</div>
