--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -39,6 +39,10 @@
     <meta property="og:image:width" content="628" />
     <meta property="og:image:height" content="1200" />
 
+    <meta name="twitter:site" content="@govdirectory">
+    <meta name="generator" content="Snowman v{{ version }}">
+    <link rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
+
     <noscript>
         <style>
             .need-js {
