📃 make it possible to set meta descriptions

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,6 +4,9 @@
 
 {{ define "canonical" }}/{{ end }}
 
+{{ define "extra-head" }}
+  <meta name="description" content="Govdirectory is a crowdsourced and fact checked directory of official governmental online accounts and services.">
+{{ end }}
 
 {{ define "main" }}
 <header class="splash">
