🐞 Fix:  Pages can sometimes have empty p tags #253

--- a/templates/org.html
+++ b/templates/org.html
@@ -6,7 +6,9 @@
 {{ define "canonical" }}/{{ include "helpers/get-country-url.html" .country }}/{{ .qid }}/{{ end }}
 
 {{ define "extra-head" }}
-  <meta name="description" content="{{ .orgDescription }}">
+    {{- if .orgDescription -}}
+        <meta name="description" content="{{ .orgDescription }}">
+    {{- end -}}
 {{ end }}
 
 {{ define "main" }}
@@ -60,7 +62,9 @@
             <a class="btn rounded wikidata-btn" href="https://www.wikidata.org/w/index.php?action=edit&title=Wikidata:WikiProject_Govdirectory/Error_reports&section=new&preloadtitle=Error+regarding+{{`{{`}}Q|{{ .qid }}{{`}}`}}&preload=Wikidata%3AWikiProject_Govdirectory%2FError_reports%2FError_report_template" title="Report a problem"><img src="/flag.svg" aria-hidden="true"></a>
         </div>
         <h1 lang="{{ .orgLabel.Lang }}">{{ .orgLabel }}</h1>
-        <p lang="{{ .orgDescription.Lang }}">{{ .orgDescription }}</p>
+        {{- if .orgDescription -}}
+            <p lang="{{ .orgDescription.Lang }}">{{ .orgDescription }}</p>
+        {{- end -}}
 
         <div class="header-lower">
             <div class="infobox">
