--- a/templates/org.html
+++ b/templates/org.html
@@ -112,7 +112,7 @@
                 {{- end -}}
             </div>
         </div>
-
+    <p class="timestamp">Data last updated <time datetime="{{ now.Format "2006-01-02" }}">{{ now.Format "2006-01-02" }}</time>.</p>
     </header>
 </div>
 
