--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -43,6 +43,7 @@
                 </div>
             </div>
         </div>
+    <p class="timestamp">Data last updated <time datetime="{{ now.Format "2006-01-02" }}">{{ now.Format "2006-01-02" }}</time>.</p>
     </header>
 </div>
 
