Update Standard for Public Code assessment to 0.7.1

--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -6,7 +6,7 @@
 
 {{ define "main" }}
 <main class="container">
-    <h1>Govdirectory and the Standard for Public Code version 0.7.0</h1>
+    <h1>Govdirectory and the Standard for Public Code version 0.7.1</h1>
     
 <h2><a href="https://standard.publiccode.net/criteria/code-in-the-open.html" class="dark-link">Code in the open</a></h2>
 
@@ -155,7 +155,7 @@ The codebase MUST be developed to be reusable in different contexts.
 Ok
 </td>
 <td>
-The codebase MUST be independent from any secret, undisclosed, proprietary or non-open licensed code or services for execution and understanding.
+The codebase MUST be independent from any secret, undisclosed, proprietary or non-open licensed software or services for execution and understanding.
 </td>
 <td>
 
@@ -203,7 +203,7 @@ The development of the codebase SHOULD be a collaboration between multiple parti
 
 </td>
 <td>
-Configuration SHOULD be used to make code adapt to context specific needs.
+Configuration SHOULD be used to make source code adapt to context specific needs.
 </td>
 <td>
 
@@ -227,7 +227,7 @@ The codebase SHOULD be localizable.
 Ok
 </td>
 <td>
-Code and its documentation SHOULD NOT contain situation-specific information.
+Source code and its documentation SHOULD NOT contain situation-specific information.
 </td>
 <td>
 
@@ -251,7 +251,7 @@ Almost there, but could be improved.
 Ok
 </td>
 <td>
-The code SHOULD NOT require services or platforms available from only a single vendor.
+The software SHOULD NOT require services or platforms available from only a single vendor.
 </td>
 <td>
 While Wikidata is primary, queries could be made to another Wikibase with replicated/mirrored data.
@@ -595,7 +595,7 @@ Needs to be documented.
 Ok
 </td>
 <td>
-Reviews SHOULD include running both the code and the tests of the codebase.
+Reviews SHOULD include running both the software and the tests of the codebase.
 </td>
 <td>
 
@@ -707,7 +707,7 @@ On <a href="https://www.govdirectory.org/about/">website</a> and in <a href="htt
 Ok
 </td>
 <td>
-All of the functionality of the codebase, policy as well as source, MUST be described in language clearly understandable for those that understand the purpose of the code.
+All of the functionality of the codebase, policy as well as source code, MUST be described in language clearly understandable for those that understand the purpose of the codebase.
 </td>
 <td>
 
@@ -719,7 +719,7 @@ All of the functionality of the codebase, policy as well as source, MUST be desc
 Ok
 </td>
 <td>
-The documentation of the codebase MUST contain a description of how to install and run the source code.
+The documentation of the codebase MUST contain a description of how to install and run the software.
 </td>
 <td>
 
@@ -835,7 +835,7 @@ All codebase documentation MUST be in English.
 Ok
 </td>
 <td>
-All code MUST be in English, except where policy is machine interpreted as code.
+All source code MUST be in English, except where policy is machine interpreted as code.
 </td>
 <td>
 
@@ -1115,7 +1115,7 @@ Testing policy and documentation for style and broken links is OPTIONAL.
 
 </td>
 <td>
-Testing the code by using examples in the documentation is OPTIONAL.
+Testing the software by using examples in the documentation is OPTIONAL.
 </td>
 <td>
 
@@ -1135,7 +1135,7 @@ Testing the code by using examples in the documentation is OPTIONAL.
 Ok
 </td>
 <td>
-All code and documentation MUST be licensed such that it may be freely reusable, changeable and redistributable.
+All source code and documentation MUST be licensed such that it may be freely reusable, changeable and redistributable.
 </td>
 <td>
 <a href="https://github.com/govdirectory/website/blob/main/LICENSE">CC0 1.0</a>
@@ -1159,7 +1159,7 @@ Software source code MUST be licensed under an <a href="https://spdx.org/license
 Ok
 </td>
 <td>
-All code MUST be published with a license file.
+All source code MUST be published with a license file.
 </td>
 <td>
 
@@ -1195,7 +1195,7 @@ All source code files in the codebase SHOULD include a copyright notice and a li
 
 </td>
 <td>
-Having multiple licenses for different types of code and documentation is OPTIONAL.
+Having multiple licenses for different types of source code and documentation is OPTIONAL.
 </td>
 <td>
 
