--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -906,7 +906,7 @@ Providing a translation of any code, documentation or tests is OPTIONAL.
 
 <h2><a href="https://standard.publiccode.net/criteria/use-open-standards.html" class="dark-link">Use open standards</a></h2>
 
-&#9744;<!-- &#9745; --> criterion met.
+&#9745;<!-- &#9745; --> criterion met.
 
 <table id="use-open-standards" style="width:100%">
 <tr><th class="js-sort-none">Meets</th><th class="js-sort-none">Requirement</th><th class="js-sort-none" style="width:25%">Notes and links</th></tr>
@@ -936,13 +936,13 @@ Any non-open standards used MUST be recorded clearly as such in the documentatio
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 Any standard chosen for use within the codebase MUST be listed in the documentation with a link to where it is available.
 </td>
 <td>
-
+<a href="https://github.com/govdirectory/website/blob/main/CONTRIBUTING.md#standards-to-follow">CONTRIBUTING</a>
 </td>
 </tr>
 
@@ -957,7 +957,7 @@ Any non-open standards chosen for use within the codebase MUST NOT hinder collab
 
 </td>
 </tr>
-
+N/A
 <tr>
 <td>
 
@@ -1376,13 +1376,13 @@ The style guide SHOULD include expectations for inline comments and documentatio
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 Including expectations for <a href="https://standard.publiccode.net/criteria/use-plain-english.html">understandable English</a> in the style guide is OPTIONAL.
 </td>
 <td>
-
+<a href="https://github.com/govdirectory/website/blob/main/CONTRIBUTING.md#standards-to-follow">CONTRIBUTING</a>
 </td>
 </tr>
 
