All images should have explicite height and width to reduce cumulative layout shift Fixes #96

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="half">
         <div class="center-text">
-          <img class="greyscale" aria-hidden="true" src="factory.jpg" height="300"/>
+          <img class="greyscale" aria-hidden="true" src="factory.jpg" width="450" height="300"/>
         </div>
         <div class="padding">
           <h2>"Who are the largest CO2 emitters in Sweden?"</h2>
@@ -58,7 +58,7 @@
           <a class="btn" href="/countries/">Ask your own government!</a>
         </div>
         <div class="center-text">
-          <img class="greyscale" aria-hidden="true" src="helicopter.jpg" height="300"/>
+          <img class="greyscale" aria-hidden="true" src="helicopter.jpg" width="450" height="300"/>
         </div>
       </div>
     </div>
