landing page: ensure images scale well

--- a/static/main.css
+++ b/static/main.css
@@ -121,6 +121,12 @@ input {
     margin: 0;
 }
 
+.landning-page-image {
+    max-width: 100%;
+    object-fit: contain;
+}
+
+
 /* SECTIONS FOR CONTENT */
 
 section {
