✅ Update review requirements in Standard for Public Code assessment
As per previous commit.

--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -304,13 +304,13 @@ There is a <a href="https://github.com/govdirectory/website#maintainers">maintai
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 The contribution guidelines SHOULD document who is expected to cover the costs of reviewing contributions.
 </td>
 <td>
-
+Stated as done by volunteers in <a href="https://github.com/govdirectory/website/blob/main/CONTRIBUTING.md#3-improve">CONTRIBUTING</a>.
 </td>
 </tr>
 
@@ -580,13 +580,13 @@ Reviewers MUST provide feedback on all decisions to not accept a contribution.
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 The review process SHOULD confirm that a contribution conforms to the standards, architecture and decisions set out in the codebase in order to pass review.
 </td>
 <td>
-Needs to be documented.
+In <a href="https://github.com/govdirectory/website/blob/main/CONTRIBUTING.md#3-improve">CONTRIBUTING</a>.
 </td>
 </tr>
 
@@ -634,7 +634,7 @@ Version control systems SHOULD NOT accept non-reviewed contributions in release 
 Reviews SHOULD happen within two business days.
 </td>
 <td>
-
+Too small comunity still, current ambition is a week.
 </td>
 </tr>
 
