--- a/templates/landing.html
+++ b/templates/landing.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="half">
         <div class="center-text">
-          <img class="greyscale landning-page-image" aria-hidden="true" src="factory.webp" width="450" height="300"/>
+          <img loading="lazy" class="greyscale landning-page-image" aria-hidden="true" src="factory.webp" width="450" height="300"/>
         </div>
         <div class="padding">
           <h2>"Who are the largest CO2 emitters in Sweden?"</h2>
@@ -58,7 +58,7 @@
           <a class="btn" href="/countries/">Ask your own government!</a>
         </div>
         <div class="center-text">
-          <img class="greyscale landning-page-image" aria-hidden="true" src="helicopter.webp" width="450" height="300"/>
+          <img loading="lazy" class="greyscale landning-page-image" aria-hidden="true" src="helicopter.webp" width="450" height="300"/>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
           <li>
             <a href="/{{ .safeName }}">
               <div>
-                <img aria-hidden="true" src="/topic-icons/{{ .safeName }}.svg"/>
+                <img loading="lazy" aria-hidden="true" src="/topic-icons/{{ .safeName }}.svg"/>
               </div>
               <span lang="{{ .name.Lang }}">{{ .name }}</span>
             </a>
