--- a/templates/tools.html
+++ b/templates/tools.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="half">
         <div class="center-text">
-          <img aria-hidden="true" src="/community.svg" width="261" height="161"/>
+          <img loading="lazy" aria-hidden="true" src="/community.svg" width="261" height="161"/>
         </div>
         <div>
           <h2>Browser extension</h2>
@@ -38,7 +38,7 @@
           <a class="btn" href="https://github.com/govdirectory/website/discussions/categories/ideas">Share your idea</a>
         </div>
         <div class="center-text">
-          <img aria-hidden="true" src="/curation.svg" width="271" height="258"/>
+          <img loading="lazy" aria-hidden="true" src="/curation.svg" width="271" height="258"/>
         </div>
         </div>
       </div>
