--- a/templates/about.html
+++ b/templates/about.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="half">
         <div class="center-text">
-          <img aria-hidden="true" src="/community.svg" width="261" height="161"/>
+          <img loading="lazy" aria-hidden="true" src="/community.svg" width="261" height="161"/>
         </div>
         <div>
           <h2>Built by a community</h2>
@@ -48,7 +48,7 @@
           <p>Based on Wikipedia's sister project Wikidata the data is constantly fact checked by a rigorous and dedicated community. With the help of tools that help monitor changes in data and entering data correctly, collectively the data can be kept up to date and accurate.</p>
         </div>
         <div class="center-text">
-          <img aria-hidden="true" src="/curation.svg" width="271" height="258"/>
+          <img loading="lazy" aria-hidden="true" src="/curation.svg" width="271" height="258"/>
         </div>
         </div>
       </div>
