--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -58,7 +58,7 @@
 
     <nav>
         <ul class="container">
-            <li><a class="no-decoration" href="/"><img title="Home" src="/logo-white.svg" width="20" height="24"><span aria-hidden="true" class="hide-mobile">Govdirectory</span></a></li>
+            <li><a class="no-decoration" href="/"><img loading="lazy" title="Home" src="/logo-white.svg" width="20" height="24"><span aria-hidden="true" class="hide-mobile">Govdirectory</span></a></li>
             <li><a class="no-decoration" href="/countries/">Countries</a></li>
             <li><a class="no-decoration" href="/topics/">Topics</a></li>
             <li><a class="no-decoration" href="/about/">About</a></li>
@@ -101,10 +101,10 @@
             </div>
         </div>
         <div class="container footer-end">
-            <a title="Go to Govdirectory's main page" href="/"><img aria-hidden="true" src="/logo-white.svg" alt="" height="60" width="50"></a>
+            <a title="Go to Govdirectory's main page" href="/"><img loading="lazy" aria-hidden="true" src="/logo-white.svg" alt="" height="60" width="50"></a>
             <div>
-                <a title="Digital Public Goods" href="https://digitalpublicgoods.net/registry/govdirectory.html"><img aria-hidden="true" height="33" width="69" src="/dpgbadge.svg"></a>
-                <a title="Powered by Wikidata" href="https://www.wikidata.org"><img aria-hidden="true" height="33" width="120" class="white-bg" src="/wikidatafooter.svg"></a>
+                <a title="Digital Public Goods" href="https://digitalpublicgoods.net/registry/govdirectory.html"><img loading="lazy" aria-hidden="true" height="33" width="69" src="/dpgbadge.svg"></a>
+                <a title="Powered by Wikidata" href="https://www.wikidata.org"><img loading="lazy" aria-hidden="true" height="33" width="120" class="white-bg" src="/wikidatafooter.svg"></a>
             </div>
         </div>
     </footer> 
