set topic icons to 50x50

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -83,7 +83,7 @@
           <li>
             <a href="/{{ .safeName }}">
               <div>
-                <img loading="lazy" aria-hidden="true" src="/topic-icons/{{ .safeName }}.svg"/>
+                <img loading="lazy" aria-hidden="true" width="50" height="50" src="/topic-icons/{{ .safeName }}.svg"/>
               </div>
               <span lang="{{ .name.Lang }}">{{ .name }}</span>
             </a>
