--- a/templates/countries-map.html
+++ b/templates/countries-map.html
@@ -11,7 +11,7 @@
         <h1>Map of countries</h1>
     </div>
     <noscript>
-        <p>This page requries JavaScript.</p>
+        <p>This page requires JavaScript.</p>
     </noscript>
     <div id="map" style="height: 80vh; width: 100%;" class="need-js"></div>
 </main>
