--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -46,6 +46,20 @@
         </div>
     <p class="timestamp">Data last updated <time datetime="{{ now.Format "2006-01-02" }}">{{ now.Format "2006-01-02" }}</time>.</p>
     </header>
+
+    {{ $country_orgs := query (join "" "generators/" .safeName.String ".rq") }}
+    {{- if (index $country_orgs 0).federalSubjects -}}
+    <details>
+        <summary><h2>Federal subjects</h2></summary>
+        <ul class="box-list">
+            {{- range split (index $country_orgs 0).federalSubjects "," -}}
+                {{- $federal_subject_details := split . "|" -}}
+                <li><a href="{{ index $federal_subject_details 1 }}">{{ index $federal_subject_details 0 }}</a></li>
+            {{- end -}}
+        </ul>
+    </details>
+    {{- end -}}
+    
 </div>
 
 <main>
@@ -61,7 +75,7 @@
 	</div>
     </section>
 
-    {{- include "org-table.html" (query (join "" "generators/" .safeName.String ".rq")) -}}
+    {{- include "org-table.html" $country_orgs -}}
 </main>
 {{ end }}
 
