--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -13,6 +13,9 @@
     </div>
     <ul class="box-list">
         {{- range . -}}
+        {{- if ge (len (split .safeName "/")) 2 -}}
+            {{- continue -}}
+        {{- end -}}
             <li lang="{{ .name.Lang }}"><a href="/{{ .safeName }}/">{{ .name }}</a></li>
         {{- end -}}
     </ul>
