--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -47,12 +47,11 @@
     <p class="timestamp">Data last updated <time datetime="{{ now.Format "2006-01-02" }}">{{ now.Format "2006-01-02" }}</time>.</p>
     </header>
 
-    {{ $country_orgs := query (join "" "generators/" .safeName.String ".rq") }}
-    {{- if (index $country_orgs 0).federalSubjects -}}
+    {{- if gt (len .federalSubjects.String) 0 -}}
     <details>
         <summary>Federal subjects</summary>
         <ul class="box-list">
-            {{- range split (index $country_orgs 0).federalSubjects "," -}}
+            {{- range split .federalSubjects "," -}}
                 {{- $federal_subject_details := split . "|" -}}
                 <li><a href="{{ index $federal_subject_details 1 }}">{{ index $federal_subject_details 0 }}</a></li>
             {{- end -}}
@@ -75,6 +74,7 @@
 	</div>
     </section>
 
+    {{- $country_orgs := query (join "" "generators/" .safeName.String ".rq") -}}
     {{- include "org-table.html" $country_orgs -}}
 </main>
 {{ end }}
