✨ Add Recognition section to About
My coloring of https://commons.wikimedia.org/wiki/File:Trophy.svg

Fixes #352

--- a/templates/about.html
+++ b/templates/about.html
@@ -55,6 +55,20 @@
     </div>
   </section>
   <section>
+    <div class="container">
+      <div class="half">
+        <div class="center-text">
+          <img loading="lazy" aria-hidden="true" src="/trophy.svg" width="140" height="182"/>
+        </div>
+        <div>
+          <h2>Recognition</h2>
+          <p>The project won a <em>WikidataCon community award</em> in 2021, was recognized as a <em>Digital Public Goods</em> by the Digital Public Goods Alliance in September 2022 and made the finalists in the category Peace – Building peaceful and inclusive societies in the <em>SDG Game Changes Award</em> in September 2023.</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-grey">
     <div class="container center-text">
       <h2 class="h2-lg">Acknowledgements</h2>
       <p class="content">This project was initially supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator</a>. <a class="dark-link" href="https://wikimedia.se/">Wikimedia Sverige</a> is graciously providing us with Matomo analytics. The data we collect is <a class="dark-link" href="https://matomo.wikimedia.se/index.php?module=CoreHome&action=index&idSite=7&period=day&date=yesterday#?idSite=7&period=day&date=yesterday&segment=&category=Dashboard_Dashboard&subcategory=1">publicly accessible</a>.</p>
