✏️ Fix small typos

--- a/templates/helpers/get-country-url.html
+++ b/templates/helpers/get-country-url.html
@@ -1,4 +1,4 @@
-{{/* "Function" takes the Wikidata URI fo the country as input and "returns" the safeName */}}
+{{/* "Function" takes the Wikidata URI for the country as input and "returns" the safeName */}}
 {{- $countryURI := . -}}
 {{- $countries := query "countries.rq" -}}
 {{- range $countries -}}
