--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -84,7 +84,7 @@
             <div class="column">
                 <p class="footer-header">Join the community</p>
                 <ul class="list-unstyled">
-                    <li><a class="no-decoration" href="https://github.com/govdirectory">Github</a></li>
+                    <li><a class="no-decoration" href="https://github.com/govdirectory">GitHub</a></li>
 
                     <li><a class="no-decoration" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Improve the data</a></li>
 
@@ -96,7 +96,7 @@
                 <ul class="list-unstyled">
 
                     <li>All data is licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/" rel="license">CC0 1.0 Universal</a>.</li>
-                    <li>For images and other resources, see <a href="https://github.com/govdirectory/website#license" rel="license">Github</a>.</li>
+                    <li>For images and other resources, see <a href="https://github.com/govdirectory/website#license" rel="license">GitHub</a>.</li>
                 </ul>
             </div>
         </div>
