--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -634,7 +634,7 @@ Version control systems SHOULD NOT accept non-reviewed contributions in release 
 Reviews SHOULD happen within two business days.
 </td>
 <td>
-Too small comunity still, current ambition is a week.
+Too small community still, current ambition is a week.
 </td>
 </tr>
 
